# ssh-cli

./: .cargoignore  .commit_hash  .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE  LICENSE-APACHE  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  build.rs  deny.toml  gaps.md  llms-full.txt  llms.pt-BR.txt  llms.txt
.github/workflows/: en-identifiers.yml
benches/: ssh_operations.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  AUDITORIA_RULES_RUST_2026-07-15.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST.pt-BR.md  TESTING.md  TESTING.pt-BR.md
docs/schemas/: README.md  error-envelope.schema.json  exec-batch.schema.json  exec.schema.json  health-check-batch.schema.json  health-check.schema.json  scp-batch.schema.json  scp-transfer.schema.json  secrets-init.schema.json  secrets-reencrypt.schema.json  sftp-batch.schema.json  sftp-fs-op.schema.json  sftp-list.schema.json  sftp-transfer.schema.json  su-exec.schema.json  sudo-exec.schema.json  tunnel-listening.schema.json  vps-doctor.schema.json  vps-export.schema.json  vps-list.schema.json  vps-show.schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: import_envelope.rs  packing_escape.rs  scp_header.rs
scripts/: check_en_identifiers.sh  dist_multiarch.sh  e2e_real_ssh.sh  generate_sbom.sh  release_attest.sh  verify_install_resolve.sh
skills/ssh-cli-en/: SKILL.md
skills/ssh-cli-en/evals/: queries.json
skills/ssh-cli-pt/: SKILL.md
skills/ssh-cli-pt/evals/: queries.json
src/: cli.rs  concurrency.rs  concurrency_tests.rs  constants.rs  error.rs  errors.rs  errors_tests.rs  erros.rs  fs_perm.rs  i18n.rs  i18n_tests.rs  lib.rs  locale.rs  main.rs  mascaramento.rs  masking.rs  net.rs  output.rs  paths.rs  retry.rs  scp.rs  secrets.rs  signals.rs  telemetry.rs  terminal.rs  tunnel.rs  validation.rs
src/cli/: commands.rs  dispatch.rs  mod.rs  path_parse.rs  schema_cmd.rs  scp_args.rs  sftp_args.rs  tests.rs  vps_action.rs
src/commands/: mod.rs
src/domain/: command.rs  error.rs  http_url.rs  ids.rs  limits.rs  mod.rs  money.rs  names.rs  ports.rs  time.rs
src/json_wire/: emit.rs  execution.rs  mod.rs  vps_export.rs
src/output/: batch.rs  emit.rs  json.rs  mod.rs  text.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/scp/: batch.rs  mod.rs  multi_host.rs  tests.rs
src/sftp/: batch.rs  mod.rs
src/ssh/: client.rs  client_connect.rs  client_handler.rs  client_real.rs  client_real_core.rs  client_real_scp.rs  client_real_sftp.rs  client_real_tests_body.rs  client_stub.rs  client_tests.rs  cliente.rs  connect.rs  connection.rs  key_material.rs  known_hosts.rs  mod.rs  packing.rs  scp_wire.rs  session_io.rs  sftp_path.rs  sftp_session.rs  sftp_types.rs
src/test_util/: env.rs  mod.rs
src/tls/: acme.rs  acme_error_map.rs  client_config.rs  commands.rs  dial.rs  mod.rs  mtls.rs  paths.rs  pem.rs  provider.rs
src/vps/: config_io.rs  crud.rs  doctor.rs  exec_ops.rs  health.rs  import_export.rs  mod.rs  model.rs  modelo.rs  secrets_cmd.rs  selection.rs  tests.rs
tests/: e2e_cli.rs  gaps_v035_integration.rs  gaps_v037_integration.rs  gaps_v038_integration.rs  gaps_v039_integration.rs  gaps_v040_integration.rs  gaps_v041_integration.rs  gaps_v042_integration.rs  gaps_v051_integration.rs  gaps_v052_tls_policy.rs  gaps_v053_domain_types.rs  gaps_v054_error_handling.rs  gaps_v055_unsafe_ffi.rs  gaps_v056_ssh.rs  gaps_v057_sftp.rs  gaps_v058_e2e_residual.rs  i18n_integration.rs  proptest_tests.rs  scp_integration.rs  snapshot_tests.rs  storage_integration.rs  tunnel_integration.rs
tests/snapshots/: snapshot_tests__error_vps_not_found.snap  snapshot_tests__help_output.snap  snapshot_tests__version_format.snap  snapshot_tests__vps_list_empty.snap  snapshot_tests__vps_path_format.snap
